--- a/app/src/main/res/navigation/navigation_main_graph.xml
+++ b/app/src/main/res/navigation/navigation_main_graph.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_main_graph">
+    android:id="@+id/navigation_main_graph"
+    app:startDestination="@id/mainFragment">
+
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.spravochnic.scbguide.ui.main.MainFragment"
+        android:label="MainFragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_lectureFragment"
+            app:destination="@id/lectureFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_testFragment"
+            app:destination="@id/testFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/lectureFragment"
+        android:name="com.spravochnic.scbguide.ui.lecture.LectureFragment"
+        android:label="LectureFragment" />
+
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.spravochnic.scbguide.ui.test.TestFragment"
+        android:label="TestFragment" />
+
 
 </navigation>
