--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="black_283665">#283665</color>
+    <color name="black_35467D">#35467D</color>
+    <color name="blue_6689E5">#6689E5</color>
+    <color name="white_FFFFFF">#FFFFFF</color>
+    <color name="grey_64748B">#64748B</color>
+    <color name="orange_FD7050">#FD7050</color>
+    <color name="main_background">#FEFAEE</color>
+    <color name="green_2C8837">#2C8837</color>
+    <color name="black_171E33">#171E33</color>
+    <color name="black_334155">#334155</color>
+    <color name="black_030303">#030303</color>
 </resources>
