--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="black_334155">#334155</color>
     <color name="black_030303">#030303</color>
 
-    <color name="statusBarColor">#0D6D6666</color>
+    <color name="dark_yellow_0D6D6666">#0D6D6666</color>
+    <color name="transparent">#00000000</color>
 </resources>
