--- a/app/src/main/res/layout/dialog_error.xml
+++ b/app/src/main/res/layout/dialog_error.xml
@@ -46,21 +46,37 @@
             app:rippleColor="@color/white" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancel"
+            android:id="@+id/localData"
             style="@style/OnlyTextButton"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginTop="@dimen/buttonCancelMarginTop"
+            android:onClick="@{() -> dialogErrorViewModel.onClickDialog(ErrorTransactionEvent.LOCAL)}"
+            android:text="@string/buttonErrorLocalDate"
+            android:textAppearance="@style/TextOrangeAppearance"
+            android:textColor="@color/black_030303"
+            app:cornerRadius="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repeat"
+            app:rippleColor="@color/blue_6689E5" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/cancel"
+            style="@style/OnlyTextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
             android:layout_marginBottom="@dimen/buttonCancelMarginBottom"
             android:onClick="@{() -> dialogErrorViewModel.onClickDialog(ErrorTransactionEvent.CANCEL)}"
             android:text="@string/buttonErrorDialogCancel"
             android:textAppearance="@style/TextOrangeAppearance"
             android:textColor="@color/black_030303"
             app:cornerRadius="15dp"
+            android:layout_marginTop="@dimen/buttonCancelMarginTop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/repeat"
+            app:layout_constraintTop_toBottomOf="@+id/localData"
             app:rippleColor="@color/blue_6689E5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
