--- a/app/src/main/res/layout/fragment_detail_lecture.xml
+++ b/app/src/main/res/layout/fragment_detail_lecture.xml
@@ -8,6 +8,8 @@
         <variable
             name="detailLectureViewModel"
             type="com.spravochnic.scbguide.ui.lecture.details.detail.DetailLectureViewModel" />
+
+        <import type="com.spravochnic.scbguide.ui.lecture.details.TransactionDetailsLectureEvent" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -41,10 +43,10 @@
                     android:layout_marginTop="@dimen/detailLectureImgMarginTop"
                     android:layout_marginBottom="@dimen/detailLectureImgMarginBottom"
                     android:scaleType="centerCrop"
+                    android:src="@drawable/test"
                     app:layout_collapseMode="parallax"
                     app:layout_scrollFlags="enterAlways|exitUntilCollapsed"
-                    tools:ignore="ContentDescription"
-                    android:src="@drawable/test" />
+                    tools:ignore="ContentDescription" />
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
@@ -52,72 +54,66 @@
                     android:layout_height="?attr/actionBarSize"
                     android:elevation="0dp"
                     app:layout_collapseMode="pin"
-                    app:navigationIcon="@drawable/ic_arrow_back" />
+                    app:navigationIcon="@drawable/ic_arrow_back"
+                    app:onNavigationIconClick="@{() -> detailLectureViewModel.onClickTransaction(TransactionDetailsLectureEvent.NAVIGATION)}" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/bottomSheet"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nested"
             style="?attr/bottomSheetStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background_bottom_sheet"
+            android:fillViewport="true"
+            android:scrollbars="none"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-            <androidx.core.widget.NestedScrollView
-                android:id="@+id/nested"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fillViewport="true"
-                android:scrollbars="none">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/linearLayout"
+                <TextView
+                    android:id="@+id/name"
+                    style="@style/NormalBlack_283665_20TextStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/detailLectureNameMarginHorizontal"
+                    android:layout_marginTop="@dimen/detailLectureNameMarginTop"
+                    tools:text="Входной светофор" />
 
-                    <TextView
-                        android:id="@+id/name"
-                        style="@style/NormalBlack_283665_20TextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/detailLectureNameMarginHorizontal"
-                        android:layout_marginTop="@dimen/detailLectureNameMarginTop"
-                        tools:text="Входной светофор" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/detailLectureDividerWight"
+                    android:layout_gravity="top"
+                    android:background="@drawable/dash_line" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/detailLectureDividerWight"
-                        android:layout_gravity="top"
-                        android:background="@drawable/dash_line" />
+                <TextView
+                    android:id="@+id/titleDescription"
+                    style="@style/OrangeNormal_FD7050_14TextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/detailLectureTitleDescriptionMarginHorizontal"
+                    android:layout_marginTop="@dimen/detailLectureTitleDescriptionMarginTop"
+                    android:text="@string/detailsLectureTitleDescription" />
 
-                    <TextView
-                        android:id="@+id/titleDescription"
-                        style="@style/OrangeNormal_FD7050_14TextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/detailLectureTitleDescriptionMarginHorizontal"
-                        android:layout_marginTop="@dimen/detailLectureTitleDescriptionMarginTop"
-                        android:text="@string/detailsLectureTitleDescription" />
-
-                    <TextView
-                        android:id="@+id/description"
-                        style="@style/NormalBlack_171E33_12TextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/detailLectureDescriptionMarginHorizontal"
-                        android:layout_marginTop="@dimen/detailLectureDescriptionMarginTop"
-                        tools:text="     Оповещение пешеходов и автомобилей о приближении поезда к охраняемому (регулируемому) или неохраняемому (нерегулируемому) железнодорожному переезду с помощью световых и звуковых сигналов.
+                <TextView
+                    android:id="@+id/description"
+                    style="@style/NormalBlack_171E33_12TextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/detailLectureDescriptionMarginHorizontal"
+                    android:layout_marginTop="@dimen/detailLectureDescriptionMarginTop"
+                    tools:text="     Оповещение пешеходов и автомобилей о приближении поезда к охраняемому (регулируемому) или неохраняемому (нерегулируемому) железнодорожному переезду с помощью световых и звуковых сигналов.
 Оповещение пешеходов и автомобилей о приближении поезда к охраняемому (регулируемому) или неохраняемому (нерегулируемому) железнодорожному переезду с помощью световых и звуковых сигналов. Оповещение пешеходов и автомобилей о приближении поезда к охраняемому (регулируемому) или неохраняемому (нерегулируемому) железнодорожному переезду с помощью световых и звуковых сигналов" />
 
-                </LinearLayout>
+            </LinearLayout>
 
-            </androidx.core.widget.NestedScrollView>
-
-        </FrameLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
