--- a/app/src/main/res/layout/view_test.xml
+++ b/app/src/main/res/layout/view_test.xml
@@ -6,6 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
+    app:rippleColor="@color/blue_6689E5"
+    android:layout_marginHorizontal="@dimen/testViewMarginHorizontal"
+    android:layout_marginBottom="@dimen/testViewMarginBottom"
     app:cardCornerRadius="@dimen/testViewCardCorner"
     app:cardElevation="@dimen/testViewCardElevator">
 
@@ -16,15 +19,15 @@
 
         <ImageView
             android:id="@+id/imgTest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/testViewImgWight"
+            android:layout_height="@dimen/testViewImgHeight"
             android:layout_marginVertical="@dimen/testViewImgMarginVertical"
             android:layout_marginStart="@dimen/testViewImgMarginStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription"
-            tools:src="@drawable/ic_beginner" />
+            tools:src="@drawable/ic_legend" />
 
         <TextView
             android:id="@+id/textLevel"
@@ -54,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/testViewCompleteMarginEnd"
             android:layout_marginBottom="@dimen/testViewCompleteMarginBottom"
+            android:visibility="gone"
             android:orientation="horizontal"
             app:cardBackgroundColor="@color/orange_FD7050"
             app:cardCornerRadius="@dimen/testViewCompleteCardCorner"
