--- a/app/src/main/res/navigation/navigation_main_graph.xml
+++ b/app/src/main/res/navigation/navigation_main_graph.xml
@@ -43,7 +43,11 @@
     <fragment
         android:id="@+id/testFragment"
         android:name="com.spravochnic.scbguide.ui.test.TestFragment"
-        android:label="TestFragment" />
+        android:label="TestFragment">
+        <action
+            android:id="@+id/action_testFragment_to_detailsTestFragment"
+            app:destination="@id/detailsTestFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailLectureFragment"
         android:name="com.spravochnic.scbguide.ui.lecture.details.detail.DetailLectureFragment"
@@ -58,7 +62,11 @@
             app:argType="string" />
         <action
             android:id="@+id/action_detailLectureFragment_to_photoLectureFragment"
-            app:destination="@id/photoLectureFragment" />
+            app:destination="@id/photoLectureFragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter"
+            app:popExitAnim="@anim/fragment_exit" />
     </fragment>
 
     <dialog
@@ -97,6 +105,15 @@
         android:id="@+id/photoLectureFragment"
         android:name="com.spravochnic.scbguide.ui.lecture.details.photo_lecture.PhotoLectureFragment"
         android:label="PhotoLectureFragment" />
+    <fragment
+        android:id="@+id/detailsTestFragment"
+        android:name="com.spravochnic.scbguide.ui.test.details.DetailsTestFragment"
+        android:label="DetailsTestFragment">
+
+        <argument
+            android:name="type"
+            app:argType="string" />
+    </fragment>
 
 
 </navigation>
