--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,17 @@
     </style>
     <!--  /ToolbarStyles -->
 
+    <!--  ButtonStyles -->
+    <style name="ButtonIconOnly" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="iconPadding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="iconGravity">textStart</item>
+        <item name="background">@android:color/transparent</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="iconTint">@color/background_button_enabled</item>
+    </style>
+    <!--  /ButtonStyles -->
 </resources>
