--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="statusBarColor">#FEFAEE</color>
 
     <!-- ShimmerColors -->
     <color name="backgroundDefaultShimmer">#f6f3f9</color>
@@ -15,10 +16,13 @@
 
     <color name="orange">#FD7050</color>
     <color name="blue">#6689E5</color>
+    <color name="light_blue">#B2B7E4</color>
     <color name="neutral500">#64748B</color>
     <color name="light_grey">#FBFBFB</color>
     <color name="grey">#BFC2D7</color>
     <color name="background">#FEFAEE</color>
     <color name="dark_blue">#171E33</color>
+    <color name="dark">#283665</color>
     <color name="red">#E5473F</color>
+    <color name="transparent">#00000000</color>
 </resources>
