--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
     <!--  /AppBarStyles -->
 
     <!--  ToolbarStyles -->
-    <style name="Vita.Toolbar" parent="Widget.Material3.Toolbar">
+    <style name="DefaultToolbar" parent="Widget.Material3.Toolbar">
         <item name="android:background">@color/background</item>
         <item name="titleCentered">true</item>
         <item name="subtitleCentered">true</item>
@@ -34,9 +34,24 @@
         <item name="titleTextColor">@color/blue</item>
         <item name="titleTextAppearance">@style/ToolbarTextAppearance</item>
     </style>
+
+    <style name="DefaultToolbarWithArrow" parent="DefaultToolbar" >
+        <item name="navigationIcon">@drawable/ic_arrow_back</item>
+    </style>
     <!--  /ToolbarStyles -->
 
     <!--  ButtonStyles -->
+    <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0.03</item>
+        <item name="android:textAppearance">@style/TextButtonStyle</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:stateListAnimator">@animator/btn_animator</item>
+        <item name="rippleColor">@color/white</item>
+    </style>
+
     <style name="ButtonIconOnly" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
@@ -48,5 +63,63 @@
         <item name="cornerRadius">50dp</item>
         <item name="iconTint">@color/background_button_enabled</item>
     </style>
+
+    <style name="DefaultButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0.03</item>
+        <item name="android:backgroundTint">@color/background_button_enabled</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:stateListAnimator">@animator/btn_animator</item>
+        <item name="rippleColor">@color/white</item>
+    </style>
+
+    <style name="TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="iconTint">@color/black</item>
+        <item name="android:textColor">@color/dark_blue</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0.03</item>
+        <item name="rippleColor">@color/blue</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:minHeight">0dp</item>
+    </style>
     <!--  /ButtonStyles -->
+
+    <!--  TextInputLayoutStyles -->
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeWidthFocused">1.5dp</item>
+        <item name="hintEnabled">false</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="android:textColorHint">@color/light_blue</item>
+        <item name="boxStrokeColor">@color/background_text_input_layout</item>
+        <item name="boxCornerRadiusBottomEnd">10dp</item>
+        <item name="boxCornerRadiusBottomStart">10dp</item>
+        <item name="boxCornerRadiusTopEnd">10dp</item>
+        <item name="boxCornerRadiusTopStart">10dp</item>
+    </style>
+    <!--  /TextInputLayoutStyles -->
+
+    <!--  TextInputEditTextStyles -->
+    <style name="TextInputEditText">
+        <item name="android:textColorHint">@color/light_blue</item>
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    <!--  /TextInputEditTextStyles -->
+
+    <!--  TextStyles -->
+    <style name="TextButtonStyle">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontWeight">600</item>
+        <item name="lineHeight">22sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <!--  /TextStyles -->
 </resources>
